objects/Case.object
<CustomObject>
    <fields>
        <fullName>Case_Handling_agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Handling agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clienteling_CS_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox not in the page layout (for reporting only) checked by the screen flow create case when a case is created from a campaign member</description>
        <label>Clienteling CS Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criticality_Level_1__c</fullName>
        <label>Criticality Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mineur</fullName>
                </value>
                <value>
                    <fullName>Majeur</fullName>
                </value>
                <value>
                    <fullName>Critique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criticality_Level_2__c</fullName>
        <label>Criticality Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mineur</fullName>
                </value>
                <value>
                    <fullName>Majeur</fullName>
                </value>
                <value>
                    <fullName>Critique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Reception_1__c</fullName>
        <label>Date of Reception by CS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Status_counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For handled cases</description>
        <label>Open Status counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_replacement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product replacement</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Product replacement)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Sale_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Sale Number</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resend_product_back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend Product Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransferAccountName__c</fullName>
        <formula>IF(ISBLANK( AccountId) ,  SuppliedName  ,Account.LastName + &quot; &quot; + Account.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TransferAccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVG_Handling_Time_HR__c</fullName>
        <formula>((ClosedDate - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )) * 24) - ((CreatedDate - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )) * 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVG Handling Time (HR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Manager_Transfer__c</fullName>
        <label>CRM Manager Transfer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Nordiks (DK/FI/SE)</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Romania</fullName>
                </value>
                <value>
                    <fullName>Australia/NZ</fullName>
                    <isActive>false</isActive>
                    <label>Australia/NZ</label>
                </value>
                <value>
                    <fullName>China</fullName>
                    <isActive>false</isActive>
                    <label>China</label>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                    <isActive>false</isActive>
                    <label>Hong Kong</label>
                </value>
                <value>
                    <fullName>Japan</fullName>
                    <isActive>false</isActive>
                    <label>Japan</label>
                </value>
                <value>
                    <fullName>Korea</fullName>
                    <isActive>false</isActive>
                    <label>Korea</label>
                </value>
                <value>
                    <fullName>Malaisia</fullName>
                    <isActive>false</isActive>
                    <label>Malaisia</label>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                    <isActive>false</isActive>
                    <label>Singapore</label>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                    <isActive>false</isActive>
                    <label>Taiwan</label>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                    <isActive>false</isActive>
                    <label>Thailand</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Transfer_Region__c</fullName>
        <label>Case Transfer Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Transfer_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Causality_assessment__c</fullName>
        <label>Causality assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Not clearly attributable</fullName>
                </value>
                <value>
                    <fullName>Unlikely</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>N.A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expert_Feedback_Date__c</fullName>
        <label>Expert Feedback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Email_Response__c</fullName>
        <description>To capture first email reponse from Customer Service Collaborators.</description>
        <label>First Email Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_change_counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores the number of times a case owner is changed.</description>
        <label>Owner change counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WF_Type_3_AfterOrder__c</fullName>
        <description>Filtered Type 3 values to use in Case Transfer Flow</description>
        <label>WF_Type_3_AfterOrder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_3_AfterOrder</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVG_Handling_Time_BHR__c</fullName>
        <label>AVG Handling Time (BHR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Microbiology_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microbiology analysis 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NbAlcmeonConversation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NbAlcmeonConversation</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Lot_Number2__c</fullName>
        <label>Batch N° primary pack</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serious_adverse_event__c</fullName>
        <label>Serious adverse event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_DidUEnjoy_Sent__c</fullName>
        <label>Survey DidUEnjoy Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentOwnerProfilName__c</fullName>
        <description>Technical Use</description>
        <label>CurrentOwnerProfilName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Lot_Number_1__c</fullName>
        <label>Batch N° primary pack 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TransferAccountCountry__c</fullName>
        <formula>TEXT(Contact.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TransferAccountCountry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cosmetovigilance_Number__c</fullName>
        <displayFormat>COSM-{0000000}</displayFormat>
        <label>Cosmetovigilance Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Created_By_Current_User__c</fullName>
        <formula>$User.Id = CreatedBy.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Tracking_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Tracking Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microbiology_analysis_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microbiology analysis 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sensitive_case_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox ticked by Customer Service if case is sensitive. This field is used in a formula for the field sensitive_case__c in order to display a pictogram in case header.
https://lvmhpcis.jira.com/browse/PCDCS-1157</description>
        <label>Sensitive Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_N_secondary_pack_1__c</fullName>
        <label>Batch N° secondary pack 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Batch_N_secondary_pack_2__c</fullName>
        <label>Batch N° secondary pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Check_Conclusion__c</fullName>
        <label>Product Check Conclusion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_DidUEnjoy_to_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox filled by a process builder PB0002 : DidYouEnjoy
If checked , a survey is send to the customer</description>
        <label>Survey DidUEnjoy to Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transporter_Tracking_URL__c</fullName>
        <formula>Related_Sale_Number__r.Transporter_Tracking_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transporter Tracking URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Manually_Transferred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox is True when a Case has been manually transferred by a User to a Store through the Screen Flow component.</description>
        <label>Case Transferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_User_Before_HQ_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The last user before the Awaiting HQ status change</description>
        <label>Last User Before HQ Queue</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Product_Handling__c</fullName>
        <label>Received Product Handling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to Central Quality</fullName>
                </value>
                <value>
                    <fullName>Sent to Local Quality</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <label>Resolved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVG_Email_Response_Time_HR__c</fullName>
        <formula>((First_Email_Response__c - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )) * 24) - ((CreatedDate - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )) * 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVG Email Response Time (HR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inbound_Interactions_Total__c</fullName>
        <formula>InboundCall__c
+ NbAlcmeonConversation__c
+NbConversation__c + IncomingEmail__c+ IncomingLetter__c
+IncomingWebform__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inbound Interactions Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refundable_Amount_Currency__c</fullName>
        <label>Refundable Amount Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVG_Email_Response_Time_BHR__c</fullName>
        <label>AVG Email Response Time (BHR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_dispatch_to_experts__c</fullName>
        <label>Dispatch date to Expert</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outbound_Interactions_total__c</fullName>
        <formula>OutboundCall__c + OutgoingEmail__c + OutgoingLetter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outbound Interactions total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_CS_Other_Countries__c</fullName>
        <label>Transfer CS Other Countries</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Russia Local E-commerce</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                    <isActive>false</isActive>
                    <label>Japan</label>
                </value>
                <value>
                    <fullName>Northam (USA &amp; Canada)</fullName>
                    <isActive>false</isActive>
                    <label>Northam (USA &amp; Canada)</label>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                    <isActive>false</isActive>
                    <label>South Africa</label>
                </value>
                <value>
                    <fullName>UAE</fullName>
                    <isActive>false</isActive>
                    <label>UAE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handling_Team_ASM_or_LVMH_CS__c</fullName>
        <formula>IF(AND(Owner:User.Title = &apos;ASM Team&apos;, OR(Owner:User.UserRole.Name = &apos;ASM perimeter&apos;,  Owner:User.UserRole.Name = &apos;Europe&apos;)), &apos;ASM Team EU&apos;,
IF(AND(Owner:User.Title = &apos;ASM Team&apos;, OR(Owner:User.UserRole.Name = &apos;NorthAmerica&apos;,  Owner:User.UserRole.Name = &apos;Europe&apos;)), &apos;ASM Team US&apos;,
IF(AND(Owner:User.Title = &apos;LVMH CS Team&apos;, OR(Owner:User.UserRole.Name = &apos;ASM perimeter&apos;,  Owner:User.UserRole.Name = &apos;Europe&apos;)) , &apos;LVMH CS Team&apos;,
&apos;&apos;)))</formula>
        <label>Handling Team (ASM or LVMH CS)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Customer_Contact_by_phone__c</fullName>
        <label>1st Customer Contact by phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Customer_Contact_by_phone__c</fullName>
        <label>2nd Customer Contact by phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_gesture_linked_to_case__c</fullName>
        <label>Commercial gesture?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Contact_reporting_excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cases created after email received on pcdcs.internalcontact@diormail.com address. To be excluded from reporting.</description>
        <label>Internal Contact (reporting excluded)</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>CRM</fullName>
        <active>true</active>
        <businessProcess>PCD Generic%2FCRM%2FGDPR Process</businessProcess>
        <label>CRM</label>
    </recordTypes>
    <recordTypes>
        <fullName>GDPR</fullName>
        <active>true</active>
        <businessProcess>PCD Generic%2FCRM%2FGDPR Process</businessProcess>
        <label>GDPR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Generic</fullName>
        <active>true</active>
        <businessProcess>PCD Generic%2FCRM%2FGDPR Process</businessProcess>
        <label>Generic (Product/Store/Brand Inquiry)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quality</fullName>
        <active>true</active>
        <businessProcess>PCD Quality Process</businessProcess>
        <label>Quality Claim</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ecommerce</fullName>
        <active>true</active>
        <businessProcess>PCD Ecommerce Process</businessProcess>
        <label>Ecommerce</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cosmetovigilance</fullName>
        <active>true</active>
        <businessProcess>PCD Cosmeto Process</businessProcess>
        <label>Cosmetovigilance</label>
    </recordTypes>
    <validationRules>
        <fullName>Case_Close</fullName>
        <active>true</active>
        <description>Closing a case should only be possible for profiles:
PCD CS Agent
PCD Manager brand</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Closed&quot;),
    ISCHANGED(Status),
    $Profile.Id &lt;&gt; &quot;00e09000000QmbF&quot;,
    $Profile.Id &lt;&gt; &quot;00e09000001ULPy&quot;,
    $Profile.Id &lt;&gt; &quot;00e09000000RKE4&quot;,
    $Profile.Id &lt;&gt; &quot;00e09000000RKE5&quot;,
    $Profile.Id &lt;&gt; &quot;00e09000000RKE6&quot;, 
			 $User.LastName &lt;&gt; &quot;Platform Integration User&quot;
    )</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Only ambassadors can close a case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Axis_mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
   OR(  RecordType.Name = &quot;Generic&quot;,
        RecordType.Name = &quot;Cosmetovigilance&quot;,
        RecordType.Name = &quot;Quality&quot;
    ),
   OR( 
        ISPICKVAL(Type, &quot;PRE PURCHASE&quot;),
        ISPICKVAL(Type, &quot;PRODUCT EXPERIENCE&quot;)
    ),
    ISBLANK(TEXT(Axis__c )),
    NOT(ISPICKVAL(Type_2__c, &quot;Store network &amp; services&quot;))
)</errorConditionFormula>
        <errorDisplayField>Axis__c</errorDisplayField>
        <errorMessage>This field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_check_conclusion_mandatory</fullName>
        <active>false</active>
        <description>product chekc conclusion mandatory if date of reception by cs is set</description>
        <errorConditionFormula>$User.Bypass_Validation_Rules__c=false &amp;&amp; not(isblank( Date_of_Reception_1__c))&amp;&amp; isblank(Product_Check_Conclusion__c)</errorConditionFormula>
        <errorMessage>You must fill the product check conclusion</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_case_only_if_owner_is_not_queue</fullName>
        <active>true</active>
        <description>Clôurer un case uniquement si l&apos;owner n&apos;est pas une queue OU si System Admin/API User OU si Spams</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;CLOSED&quot;),
ISCHANGED(Status),
NOT(ISPICKVAL(Type_2__c, &quot;Spams&quot;)),
AND (ISBLANK(Owner:User.Id), $Profile.Id &lt;&gt; &quot;00e09000001ULPy&quot;, $Profile.Id &lt;&gt; &quot;00e09000000QmbF&quot;)
)</errorConditionFormula>
        <errorMessage>You have to assign the case to yourself or someone from the CS before closing it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Received_Product_Handling_is_resolved</fullName>
        <active>true</active>
        <description>Fields “Conclusion Date” and “Decision” are mandatory when received product handling is resolved</description>
        <errorConditionFormula>$User.Bypass_Validation_Rules__c=false
&amp;&amp;
RecordType.DeveloperName=&quot;Quality&quot;
&amp;&amp;
ISPICKVAL(Received_Product_Handling__c, &quot;NA&quot;) 
&amp;&amp; 
OR(ISBLANK(Conclusion_Date__c), ISPICKVAL(Decision__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>Conclusion date and decision are mandatory when Received Product Handling is set to resolved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Spam_button_only_for_specific_Origins</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Type_2__c,&quot;spams&quot;), NOT( OR(ISPICKVAL(Origin,&quot;Email&quot;),ISPICKVAL(Origin,&quot;Email Contact Form&quot;), ISPICKVAL(Origin,&quot;Dior Couture&quot;), ISPICKVAL(Origin,&quot;Facebook&quot;), ISPICKVAL(Origin,&quot;Business-Chat&quot;)))
)</errorConditionFormula>
        <errorMessage>You can only qualify Email, Email Contact Form, Dior Couture or Social Media Cases as Spams.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_resolution_mandatory_to_close_case</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Status,&quot;closed&quot;)  &amp;&amp; ISPICKVAL(Case_resolution__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Case_resolution__c</errorDisplayField>
        <errorMessage>The case has not been closed because the &quot;Case resolution&quot; field is mandatory to close a Case. Please fill it out before closing the Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RemotePayment_restriction_on_checkboxes</fullName>
        <active>true</active>
        <description>To prevent Customer Service from selecting Pay By Call and Assisted Sales at the same time.</description>
        <errorConditionFormula>AND( Order_on_behalf__c = true,  Pay_By_Call__c = true)</errorConditionFormula>
        <errorMessage>You can&apos;t select &quot;Pay By Call&quot; and &quot;Assisted Sales&quot; at the same time, Please only select one option.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RemotePayment_restriction_on_relatedSale</fullName>
        <active>true</active>
        <description>If one of the checkboxes is ticked (&quot;Assisted Sales&quot; or &quot;Pay By Call&quot;), the Related Sale Number becomes mandatory.</description>
        <errorConditionFormula>OR(
AND( Order_on_behalf__c = true, ISBLANK( Related_Sale_Number__c)), 
AND( Pay_By_Call__c = true, ISBLANK( Related_Sale_Number__c))  
				)</errorConditionFormula>
        <errorMessage>As this Case is related to remote payment, you have to fill out the &quot;Related Sale Number&quot;.</errorMessage>
    </validationRules>
</CustomObject>